# onvifviewer

./: .gitignore  CMakeLists.txt  README.md  diff-onvif-wsdl.sh  test_onvif_auth.sh  test_onvif_stream.sh
docs/: PROBLEMAS-CONHECIDOS.md
libOnvifConnect/: CMakeLists.txt  mpegtsmuxer.cpp  mpegtsmuxer.h  onvifdeviceconnection.cpp  onvifdeviceconnection_p.h  onvifdeviceservice.cpp  onvifdeviceservice.h  onvifmedia2service.cpp  onvifmedia2service.h  onvifmediaprofile.cpp  onvifmediaprofile.h  onvifmediaservice.cpp  onvifmediaservice.h  onvifptzservice.cpp  onvifptzservice.h  sofiaconnection.cpp  sofiaconnection.h  sofiadiscovery.cpp  sofiadiscovery.h  sofiamediaserver.cpp  sofiamediaserver.h  sofiavideostream.cpp  sofiavideostream.h
src/: AboutPage.qml  AddCameraSheet.qml  AddDemoCamera.qml  CMakeLists.txt  CameraGridView.qml  CameraSingleView.qml  CameraStatusBadge.qml  DeviceSettingsPage.qml  DeviceSettingsSheet.qml  DeviceViewerPage.qml  DiscoverCamera.qml  MainPage.qml  MosaicPage.qml  OnvifCameraViewer.qml  OnvifStreamViewer.qml  OverviewPage.qml  main.cpp  main.qml  onvifdevice.cpp  onvifdevice.h  onvifdevicediscover.cpp  onvifdevicediscover.h  onvifdevicemanager.cpp  onvifdevicemanager.h  onvifrecorder.cpp  onvifrecorder.h  onvifsnapshotdownloader.cpp  onvifsnapshotdownloader.h  onvifsnapshotviewer.cpp  qml.qrc
src/+qtav/: OnvifStreamViewer.qml
